--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -1,5 +1,6 @@
 .container {
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 
